[tool.poetry]
name = "get-papers"
version = "0.1.0"
description = "CLI tool to fetch PubMed papers with company-affiliated authors"
authors = ["Snitika Dash <snitikad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.83"

[tool.poetry.scripts]
get-papers-list = "cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
